--- a/1. Información del sistema.md
+++ b/1. Información del sistema.md
@@ -8,6 +8,6 @@ Herramientas para obtener información detallada sobre el hardware y software de
 
 **Vídeo explicativo:**
 
-  [![Video - Speccy](https://img.youtube.com/vi/7QmCUDHpNzE/0.jpg)](https://www.youtube.com/watch?v=7QmCUDHpNzE)
+  [Video - Speccy](https://www.youtube.com/watch?v=7QmCUDHpNzE)(https://img.youtube.com/vi/7QmCUDHpNzE/0.jpg)
 
 _Ejemplo de uso: Visualiza la información de tu sistema con Speccy._
