--- a/1. Información del sistema.md
+++ b/1. Información del sistema.md
@@ -6,8 +6,10 @@ Herramientas para obtener información detallada sobre el hardware y software de
 
 [Descargar Speccy](https://www.ccleaner.com/speccy/download)
 
+![Imagen del programa](https://img.youtube.com/vi/7QmCUDHpNzE/0.jpg)
+
 **Vídeo explicativo:**
 
-  [Video - Speccy](https://www.youtube.com/watch?v=7QmCUDHpNzE)(https://img.youtube.com/vi/7QmCUDHpNzE/0.jpg)
+  [Video - Speccy](https://www.youtube.com/watch?v=7QmCUDHpNzE)
 
 _Ejemplo de uso: Visualiza la información de tu sistema con Speccy._
