--- a/1. Información del sistema.md
+++ b/1. Información del sistema.md
@@ -1,12 +1,14 @@
+## Información del sistema
+
 **Descripción**
 
 Herramientas para obtener información detallada sobre el hardware y software del sistema.
 
 **Herramienta sugerida:**  [Speccy](https://www.ccleaner.com/speccy)
 
-[Descargar Speccy](https://www.ccleaner.com/speccy/download)
-
 ![Imagen del programa](https://img.youtube.com/vi/7QmCUDHpNzE/0.jpg)
+
+[Descargar Speccy](https://www.ccleaner.com/speccy/download)
 
 **Vídeo explicativo:**
 
