Update 1. Información del sistema.md

--- a/1. Información del sistema.md
+++ b/1. Información del sistema.md
@@ -15,3 +15,5 @@ Herramientas para obtener información detallada sobre el hardware y software de
   [Video - Speccy](https://www.youtube.com/watch?v=7QmCUDHpNzE)
 
 _Ejemplo de uso: Visualiza la información de tu sistema con Speccy._
+
+[Índice](https://github.com/josemurillorajo/Kit-de-herramientas-basicas/blob/main/README.md) | [Página siguiente >](https://github.com/josemurillorajo/Kit-de-herramientas-basicas/blob/main/2.%20Testeo%20Diario.md)
