--- a/2. Testeo Diario.md
+++ b/2. Testeo Diario.md
@@ -15,3 +15,5 @@ Herramientas para analizar el estado de salud de los discos duros y SSD.
   [Video - CrystalDiskInfo](https://www.youtube.com/watch?v=1ZtV9rKjK0s)
 
 _Ejemplo de uso: Monitoriza la salud de tu disco duro en segundos._
+
+[< Página anterior](https://github.com/josemurillorajo/Kit-de-herramientas-basicas/blob/main/1.%20Informaci%C3%B3n%20del%20sistema.md) | [Índice](https://github.com/josemurillorajo/Kit-de-herramientas-basicas/blob/main/README.md) | [Página siguiente >](https://github.com/josemurillorajo/Kit-de-herramientas-basicas/blob/main/3.%20Recuperaci%C3%B3n%20de%20Sistema.md)
