--- a/3. Recuperación de Sistema.md
+++ b/3. Recuperación de Sistema.md
@@ -15,3 +15,5 @@ Herramientas para recuperar archivos borrados accidentalmente.
   [Video - Recuva](https://www.youtube.com/watch?v=Xk1gHDytPrA)
 
 _Ejemplo de uso: Recupera archivos eliminados fácilmente._
+
+[< Página anterior](https://github.com/josemurillorajo/Kit-de-herramientas-basicas/blob/main/2.%20Testeo%20Diario.md) | [Índice](https://github.com/josemurillorajo/Kit-de-herramientas-basicas/blob/main/README.md) | [Página siguiente >](https://github.com/josemurillorajo/Kit-de-herramientas-basicas/blob/main/4.%20Recuperaci%C3%B3n%20de%20contrase%C3%B1as.md)
