--- a/4. Recuperación de contraseñas.md
+++ b/4. Recuperación de contraseñas.md
@@ -15,3 +15,5 @@ Herramientas para recuperar contraseñas almacenadas en el sistema (por ejemplo,
   [Video - WirelessKeyView](https://www.youtube.com/watch?v=iX8gYJ0Qf1w)
 
 _Ejemplo de uso: Recupera contraseñas de redes WiFi guardadas._
+
+[< Página anterior](https://github.com/josemurillorajo/Kit-de-herramientas-basicas/blob/main/3.%20Recuperaci%C3%B3n%20de%20Sistema.md) | [Índice](https://github.com/josemurillorajo/Kit-de-herramientas-basicas/blob/main/README.md) | [Página siguiente >](https://github.com/josemurillorajo/Kit-de-herramientas-basicas/blob/main/5.%20Herramienta%20libre%20Monitor%20de%20recursos.md)
