--- a/5. Herramienta libre Monitor de recursos.md
+++ b/5. Herramienta libre Monitor de recursos.md
@@ -15,3 +15,5 @@ Herramientas para monitorizar el uso de CPU, memoria RAM, red y procesos en tiem
   [Video - Process Explorer](https://www.youtube.com/watch?v=5_AZ9G6HP0c)
 
 _Ejemplo de uso: Recupera contraseñas de redes WiFi guardadas._
+
+[< Página anterior](https://github.com/josemurillorajo/Kit-de-herramientas-basicas/blob/main/4.%20Recuperaci%C3%B3n%20de%20contrase%C3%B1as.md) | [Índice](https://github.com/josemurillorajo/Kit-de-herramientas-basicas/blob/main/README.md)
