--- a/1. Información del sistema.md
+++ b/1. Información del sistema.md
@@ -8,7 +8,7 @@ Herramientas para obtener información detallada sobre el hardware y software de
 
 ![Imagen del programa](https://img.youtube.com/vi/7QmCUDHpNzE/0.jpg)
 
-[Descargar Speccy](https://www.ccleaner.com/speccy/download)
+[Descargar Speccy](https://speccy-system-information.uptodown.com/windows/descargar)
 
 **Vídeo explicativo:**
 
