--- a/2. Testeo Diario.md
+++ b/2. Testeo Diario.md
@@ -8,7 +8,7 @@ Herramientas para analizar el estado de salud de los discos duros y SSD.
 
 ![Imagen del programa](https://img.youtube.com/vi/1ZtV9rKjK0s/0.jpg)
 
-[Descargar CrystalDiskInfo](https://crystalmark.info/en/download/)
+[Descargar CrystalDiskInfo](https://sourceforge.net/projects/crystaldiskinfo/)
 
 **Vídeo explicativo:**
 
