--- a/4. Recuperación de contraseñas.md
+++ b/4. Recuperación de contraseñas.md
@@ -4,7 +4,7 @@
 
 Herramientas para recuperar contraseñas almacenadas en el sistema (por ejemplo, WiFi).
 
-**Herramienta sugerida:**  [WirelessKeyView](https://www.nirsoft.net/utils/wireless_key.html)
+**Herramienta sugerida:**  [WirelessKeyView](https://www.nirsoft.net/utils/wireless_key.html#google_vignette)
 
 ![Imagen del programa](https://img.youtube.com/vi/iX8gYJ0Qf1w/0.jpg)
 
