--- a/5. Herramienta libre Monitor de recursos.md
+++ b/5. Herramienta libre Monitor de recursos.md
@@ -4,7 +4,7 @@
 
 Herramientas para monitorizar el uso de CPU, memoria RAM, red y procesos en tiempo real.
 
-**Herramienta sugerida:**  [Process Explorer](https://docs.microsoft.com/en-us/sysinternals/downloads/process-explorer)
+**Herramienta sugerida:**  [Process Explorer](https://learn.microsoft.com/en-us/sysinternals/downloads/process-explorer)
 
 ![Imagen del programa](https://img.youtube.com/vi/5_AZ9G6HP0c/0.jpg)
 
