--- a/3. Recuperación de Sistema.md
+++ b/3. Recuperación de Sistema.md
@@ -4,11 +4,11 @@
 
 Herramientas para recuperar archivos borrados accidentalmente.
 
-**Herramienta sugerida:**  [Recuva](https://www.ccleaner.com/recuva)
+**Herramienta sugerida:**  [Recuva](https://www.recuva.site/es/)
 
 ![Imagen del programa](https://img.youtube.com/vi/Xk1gHDytPrA/0.jpg)
 
-[Descargar Recuva](https://www.ccleaner.com/recuva/download)
+[Descargar Recuva](https://recuva.uptodown.com/windows/descargar)
 
 **Vídeo explicativo:**
 
