Update 3. Recuperación de Sistema.md

--- a/3. Recuperación de Sistema.md
+++ b/3. Recuperación de Sistema.md
@@ -6,7 +6,7 @@ Herramientas para recuperar archivos borrados accidentalmente.
 
 **Herramienta sugerida:**  [Recuva](https://www.recuva.site/es/)
 
-![Imagen del programa](https://img.youtube.com/vi/Xk1gHDytPrA/0.jpg)
+![Imagen del programa](https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSrfzS5Rxyr17LmjQ_MltYll9ogdGWFIsLClQ&s)
 
 [Descargar Recuva](https://recuva.uptodown.com/windows/descargar)
 
