Update 2. Testeo Diario.md

--- a/2. Testeo Diario.md
+++ b/2. Testeo Diario.md
@@ -6,7 +6,7 @@ Herramientas para analizar el estado de salud de los discos duros y SSD.
 
 **Herramienta sugerida:**  [CrystalDiskInfo](https://crystalmark.info/en/software/crystaldiskinfo/)
 
-![Imagen del programa](https://img.youtube.com/vi/1ZtV9rKjK0s/0.jpg)
+![Imagen del programa]([https://img.youtube.com/vi/1ZtV9rKjK0s/0.jpg](https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQy18lga22df5S2EJnHGJ87vs0AucGD-QIhPQ&s))
 
 [Descargar CrystalDiskInfo](https://sourceforge.net/projects/crystaldiskinfo/)
 
