Update 2. Testeo Diario.md

--- a/2. Testeo Diario.md
+++ b/2. Testeo Diario.md
@@ -6,7 +6,7 @@ Herramientas para analizar el estado de salud de los discos duros y SSD.
 
 **Herramienta sugerida:**  [CrystalDiskInfo](https://crystalmark.info/en/software/crystaldiskinfo/)
 
-![Imagen del programa](https://www.google.com/url?sa=i&url=https%3A%2F%2Ftavalik.ru%2Fdiagnostika-hdd-s-crystaldiskinfo%2F&psig=AOvVaw3In4F4NkTaJ9TXO7mxRLjH&ust=1748188496039000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCOCF2-O7vI0DFQAAAAAdAAAAABAL)
+![Imagen del programa](https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQy18lga22df5S2EJnHGJ87vs0AucGD-QIhPQ&s)
 
 [Descargar CrystalDiskInfo](https://sourceforge.net/projects/crystaldiskinfo/)
 
