--- a/4. Recuperación de contraseñas.md
+++ b/4. Recuperación de contraseñas.md
@@ -6,7 +6,7 @@ Herramientas para recuperar contraseñas almacenadas en el sistema (por ejemplo,
 
 **Herramienta sugerida:**  [WirelessKeyView](https://www.nirsoft.net/utils/wireless_key.html#google_vignette)
 
-![Imagen del programa]([https://img.youtube.com/vi/iX8gYJ0Qf1w/0.jpg](https://into.hu/uploads/images2/2015/05/26-20-26-WirelessKeyView-logo.png))
+![Imagen del programa](https://into.hu/uploads/images2/2015/05/26-20-26-WirelessKeyView-logo.png)
 
 [Descargar WirelessKeyView]([https://www.nirsoft.net/utils/wirelesskeyview.zip](https://www.nirsoft.net/utils/wireless_key.html#google_vignette))
 
