Update 4. Recuperación de contraseñas.md

--- a/4. Recuperación de contraseñas.md
+++ b/4. Recuperación de contraseñas.md
@@ -8,7 +8,7 @@ Herramientas para recuperar contraseñas almacenadas en el sistema (por ejemplo,
 
 ![Imagen del programa](https://into.hu/uploads/images2/2015/05/26-20-26-WirelessKeyView-logo.png)
 
-[Descargar WirelessKeyView]([https://www.nirsoft.net/utils/wirelesskeyview.zip](https://www.nirsoft.net/utils/wireless_key.html#google_vignette))
+[Descargar WirelessKeyView](https://www.nirsoft.net/utils/wireless_key.html#google_vignette)
 
 **Vídeo explicativo:**
 
