Update 4. Recuperación de contraseñas.md

--- a/4. Recuperación de contraseñas.md
+++ b/4. Recuperación de contraseñas.md
@@ -12,7 +12,7 @@ Herramientas para recuperar contraseñas almacenadas en el sistema (por ejemplo,
 
 **Vídeo explicativo:**
 
-  [Video - WirelessKeyView]([https://www.youtube.com/watch?v=iX8gYJ0Qf1w](https://www.youtube.com/watch?v=p6VGnP-ddXY))
+  [Video - WirelessKeyView](https://www.youtube.com/watch?v=p6VGnP-ddXY)
 
 _Ejemplo de uso: Recupera contraseñas de redes WiFi guardadas._
 
