Update 1. Información del sistema.md

--- a/1. Información del sistema.md
+++ b/1. Información del sistema.md
@@ -12,7 +12,7 @@ Herramientas para obtener información detallada sobre el hardware y software de
 
 **Vídeo explicativo:**
 
-  [Video - Speccy](https://www.youtube.com/watch?v=7QmCUDHpNzE)
+  [Video - Speccy](https://www.youtube.com/watch?v=VVNIfeYJTv4)
 
 _Ejemplo de uso: Visualiza la información de tu sistema con Speccy._
 
