Update 2. Testeo Diario.md

--- a/2. Testeo Diario.md
+++ b/2. Testeo Diario.md
@@ -12,7 +12,7 @@ Herramientas para analizar el estado de salud de los discos duros y SSD.
 
 **Vídeo explicativo:**
 
-  [Video - CrystalDiskInfo](https://www.youtube.com/watch?v=1ZtV9rKjK0s)
+  [Video - CrystalDiskInfo](https://www.youtube.com/watch?v=MHOBFQfDpXc)
 
 _Ejemplo de uso: Monitoriza la salud de tu disco duro en segundos._
 
