Update 5. Herramienta libre Monitor de recursos.md

--- a/5. Herramienta libre Monitor de recursos.md
+++ b/5. Herramienta libre Monitor de recursos.md
@@ -6,13 +6,13 @@ Herramientas para monitorizar el uso de CPU, memoria RAM, red y procesos en tiem
 
 **Herramienta sugerida:**  [Process Explorer](https://learn.microsoft.com/en-us/sysinternals/downloads/process-explorer)
 
-![Imagen del programa]([https://img.youtube.com/vi/5_AZ9G6HP0c/0.jpg](https://img.utdstc.com/icon/f8f/e9c/f8fe9cdf17fe1f3431c6173b973a49cc9f51aea23c6d8dffa9b690470fa98a0c:200))
+![Imagen del programa](https://img.utdstc.com/icon/f8f/e9c/f8fe9cdf17fe1f3431c6173b973a49cc9f51aea23c6d8dffa9b690470fa98a0c:100)
 
 [Descargar Process Explorer](https://learn.microsoft.com/en-us/sysinternals/downloads/process-explorer)
 
 **Vídeo explicativo:**
 
-  [Video - Process Explorer](https://www.youtube.com/watch?v=5_AZ9G6HP0c)
+  [Video - Process Explorer]([https://www.youtube.com/watch?v=5_AZ9G6HP0c](https://www.youtube.com/watch?v=3xEG4kIYt-A))
 
 _Ejemplo de uso: Recupera contraseñas de redes WiFi guardadas._
 
