Update 5. Herramienta libre Monitor de recursos.md

--- a/5. Herramienta libre Monitor de recursos.md
+++ b/5. Herramienta libre Monitor de recursos.md
@@ -12,7 +12,7 @@ Herramientas para monitorizar el uso de CPU, memoria RAM, red y procesos en tiem
 
 **Vídeo explicativo:**
 
-  [Video - Process Explorer]([https://www.youtube.com/watch?v=5_AZ9G6HP0c](https://www.youtube.com/watch?v=3xEG4kIYt-A))
+  [Video - Process Explorer](https://www.youtube.com/watch?v=3xEG4kIYt-A)
 
 _Ejemplo de uso: Recupera contraseñas de redes WiFi guardadas._
 
